--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,209 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+    *{
+      margin:0;
+      padding:0;
+      box-sizing: border-box;
+      outline:none;
+      text-decoration:none;
+      list-style: none;
+      -webkit-tap-highlight-color: transparent;
+      font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+      Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    }
+
+
+
+
+    
+     /* These are my variables */
+    :root{
+      --color-bg : #17355a;
+      --color-bg-var : #64a3f0;
+      --color-primary: #c4aa26;
+      --color-primary-variant : #384555;
+      --color-white: #ffffff;
+      --color-black: #000000;
+      --color-light: #17355a;
+      --container-width-lg : 75%;
+      --container-width-md:86%;
+      --container-width-sm:95%;
+      --transition : all 0ms ease-in-out;
+    }
+
+
+html::-webkit-scrollbar {
+  display: none;
+}
+html, body{
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+  font-family: Arial, sans-serif, 'Franklin Gothic Medium', 'Arial Narrow', sans-serif;
+  background-color: var(--color-bg);
+  color:var(--color-white);
+  line-height:1.7;
 }
 
-a {
-  color: inherit;
+.container{
+  height: auto;
+  margin: auto;
+  padding:0rem 0.2rem; 
+}
+
+/*============== Headers styles===============================================  */
+h1{
+  font-size: 2.5rem;
+}
+h2 { 
+  font-size: 1rem;
+}
+
+h1, h2, h3, h4, h5{
+  font-weight: 500;
+}
+
+
+
+ /* ==================================  The  a tag or link  style ============================== */
+ 
+
+ a {
+  color: var(--color-primary);
+  transition:var(--transition);
+  cursor:pointer;
+}
+
+a:hover{
+  color:var(--color-white);
+}
+
+.footer a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+}
+
+.title a {
+  color: #0070f3;
   text-decoration: none;
 }
-
-* {
-  box-sizing: border-box;
+.section{
+  height:auto;
 }
+.main {
+  min-height: 100vh;
+  padding: 4rem 0;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.footer {
+  display: flex;
+  flex: 1;
+  padding: 2rem 0;
+  border-top: 1px solid #eaeaea;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.title {
+  margin: 0;
+  line-height: 1.15;
+  font-size: 4rem;
+}
+
+.code {
+  background: #fafafa;
+  border-radius: 5px;
+  padding: 0.75rem;
+  font-size: 1.1rem;
+  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
+    Bitstream Vera Sans Mono, Courier New, monospace;
+}
+
+.grid {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  max-width: 800px;
+}
+
+
+/*================= card style========================================= */
+
+.card {
+  margin: 1rem;
+  padding: 1.5rem;
+  text-align: left;
+  color: inherit;
+  text-decoration: none;
+  border: 1px solid #eaeaea;
+  border-radius: 10px;
+  transition: color 0.15s ease, border-color 0.15s ease;
+  max-width: 300px;
+}
+
+.card:hover,
+.card:focus,
+.card:active {
+  color: #0070f3;
+  border-color: #0070f3;
+}
+
+.card h2 {
+  margin: 0 0 1rem 0;
+  font-size: 1.5rem;
+}
+
+.card p {
+  margin: 0;
+  font-size: 1.25rem;
+  line-height: 1.5;
+}
+
+.logo {
+  height: 1em;
+  margin-left: 0.5rem;
+}
+
+/* ===============================================the image global styling=============================  */
+
+img{
+    display: block;
+    width:100%;
+   object-fit:cover;
+}
+
+
+/*====================== Responsive site  medaia quirey =========================================== */
+
+@media screen and (max-width:1080px) {
+  .container {
+    width: var(--container-width-md);
+    height: 100vh;
+  }
+}
+
+@media screen and (max-width:800px) {
+
+  .container{
+    width: var(--container-width-sm)
+  }
+}
+
+
+@media (max-width: 600px) {
+  .grid {
+    width: 100%;
+    flex-direction: column;
+  }
+
+}
+
+
+
+
