edit and added the experience

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -179,6 +179,29 @@ img{
 }
 
 
+/*======================    ===============================here is the button styling  */
+.btn{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1rem;
+  font-style: bold;
+  width: max-content;
+  background-color: var(--color-primary);
+  display: inline-block;
+  color: var(--color-bg);
+  padding: 0.5rem 2rem;
+  margin:0.3rem 1rem;
+  border-radius: 5px;
+  cursor: pointer;
+  border: none;
+  transition:var(--transition);
+}
+
+.btn:hover{
+  background:var(--color-white);
+  color:var(--color-black);
+  border-color:transparent;
+  cursor:pointer;
+}
 /*====================== Responsive site  medaia quirey =========================================== */
 
 @media screen and (max-width:1080px) {
