--- a/styles/experience.module.scss
+++ b/styles/experience.module.scss
@@ -1,26 +1,30 @@
+.container{
+    height:100vh;
+    margin-top:10rem ;
 
-.exp-box{
-    margin: auto;   
-    max-width: 1000px;
+}
+.exp_box{
+    margin: auto;
+    align-items: center;
+    max-width: 1200px;
 }
 .exp_content{
-
     background-color: rgb(0,0,0,0.1);
     margin:0.2rem;
     border-radius: 0.4rem;
 }
-.exp-container{
-    height: auto;
+.exp_container{
     margin:auto;
-    background-color: rgba(165, 144, 144, 0.164);
+    // background-color: rgba(165, 144, 144, 0.164);
     display: grid;
     grid-template-columns: 100%;
     width: 100%;
 }
 .exp_details{
+
     text-align: center;
     display:block;
-    padding: 0rem;
+    padding: 0.7rem;
     margin: 0.2rem;
 
 }
@@ -44,15 +48,9 @@
 
 
 @media screen and (max-width:1080px) {
-    .container {
-        height: auto;
-        margin:auto;
-    }  
+  
     .exp-box{
-        /* background-color: rgb(0,0,0,0.1); */
-        padding: 0rem;
-        margin: 0rem;
-        max-width: 100%;
+        margin: 1rem;
     }  
     .exp_content{
         margin: 0.5rem;
@@ -76,17 +74,14 @@
 
 
 @media screen and (max-width:470px) {
-    .container {
-        height: auto;
-        margin: auto;
-    }  
+   
     .exp-box{
         padding: 0.4rem;
         max-width: 100%;
-        margin: auto;
+        margin: 1rem;
     } 
     .exp-container{
-       margin-top: 4rem;
+    
     } 
     .exp_content{
         margin: 0.6rem;
