--- a/styles/experience.module.scss
+++ b/styles/experience.module.scss
@@ -1,32 +1,36 @@
 .container{
     height:100vh;
-    margin-top:10rem ;
-
-}
-.exp_box{
-    margin: auto;
+    margin-top:5rem ;
     align-items: center;
+    margin: auto;
+}
+
+.expBox{
+    margin: auto;
     max-width: 1200px;
 }
-.exp_content{
+.expContent{
     background-color: rgb(0,0,0,0.1);
     margin:0.2rem;
     border-radius: 0.4rem;
+    
 }
-.exp_container{
+.expContainer{
     margin:auto;
     // background-color: rgba(165, 144, 144, 0.164);
     display: grid;
     grid-template-columns: 100%;
     width: 100%;
 }
-.exp_details{
-
+.expDetails{
     text-align: center;
     display:block;
     padding: 0.7rem;
     margin: 0.2rem;
 
+}
+.expDetails h1{
+    font-size: 1rem ;
 }
 .IconCheck{
     font-size:1.4rem;
@@ -49,13 +53,13 @@
 
 @media screen and (max-width:1080px) {
   
-    .exp-box{
+    .expBox{
         margin: 1rem;
     }  
-    .exp_content{
+    .expContent{
         margin: 0.5rem;
     }
-    .exp_details{
+    .expDetails{
         padding: 0.4rem;
         margin: 0.4rem;
     }
@@ -75,22 +79,25 @@
 
 @media screen and (max-width:470px) {
    
-    .exp-box{
+    .expBox{
         padding: 0.4rem;
         max-width: 100%;
-        margin: 1rem;
+        margin: auto;
     } 
-    .exp-container{
+    .expContainer{
     
     } 
-    .exp_content{
+    .expContent{
         margin: 0.6rem;
     }
     
-    .exp_details{
+    .expDetails{
         font-size: 0.8rem;
         padding: 0.4rem;
         margin: auto;
+    }
+    .expDetails h1{
+        font-size: 0.7rem ;
     }
     .IconCheck{
         font-size: 1.4rem;
@@ -112,6 +119,6 @@
     display: inline;
 }
 .uipath{
-    font-size: 0.7rem;
+
     color:white;
 }
