--- a/styles/header.module.scss
+++ b/styles/header.module.scss
@@ -5,27 +5,24 @@
 
 
 .header__container{
-    height: auto;
+    height: 100%;
     margin:auto;
     display: grid;
     grid-template-columns:45% 45%;
     gap: 10%;
     align-items: center;
     text-align: center;
-
 }
 
 .header__text {
-    background-color: rgb(255, 255, 255);
-    border: 0.5rem solid rgba(255, 255, 255, 0.796);
     max-width: 100%;
     width: 70%;
-    height:auto;
+    height:100%;
     color:black;
-    margin: 1rem auto;
-    padding: 1rem 1rem; 
+    margin: auto;
     font-size: 1rem;
     border-radius: 0.2rem;
+    margin-bottom: 10rem;
 }
 
 
