--- a/styles/navbar.module.scss
+++ b/styles/navbar.module.scss
@@ -33,6 +33,13 @@
     margin:1rem 0rem;
     border-radius: 50%;
     display: flex;
+    &:active{
+        background-color: rgba(147, 138, 138, 0.3);
+    }
+    &:hover {
+        background-color: rgba(0, 0, 0, 0.3);
+    };
+    
 } 
     // background-color: ${({isOpen}) => (isOpen ? "#000000" : "none") };
  
@@ -44,6 +51,8 @@
     padding:0.5rem;
     border-radius: 50%;
 }
+
+
 
 
 
