--- a/styles/cvCompos.module.scss
+++ b/styles/cvCompos.module.scss
@@ -1,5 +1,5 @@
 
-.page-container{
+.pageContainer{
     color: rgb(255, 255, 255);
     max-width: 70%;
     width:auto;
@@ -8,7 +8,7 @@
     border: 1px solid white;
     font-size: 1rem;
 }
-.cv-container{
+.cvContainer{
     display: grid;
     grid-template-columns: 25% 70%;
     height: auto;
@@ -30,18 +30,18 @@
 
 }
 
-.lan-container{
+.lanContainer{
     margin: 1rem 0.5rem;
     padding: 1rem;
 }
-.dot-container{
+.dotContainer{
     text-align: center;
     display: flex;
     flex-direction: row;
     margin: auto;
   
 }
-.dot-empty {
+.dotEmpty {
     margin: 0.4rem;
     height: 0.8rem;
     width: 0.8rem;
@@ -49,7 +49,7 @@
     border-radius: 50%;
     display: inline-block;
   }
-.dot-colored {
+.dotColored {
     margin: 0.4rem;
     height: 0.8rem;
     width: 0.8rem;
@@ -66,10 +66,10 @@
       margin: 1rem 0.5rem;
       padding: 1rem;
   }
-  .main-header{
+  .mainHeader{
     padding: 1rem;
   }
-  .main-part{
+  .mainPart{
       display: grid;
       grid-template-columns: 5% 90%;
       gap:2%
@@ -82,11 +82,11 @@
     margin-left: auto;
   }
 
-  .section-title{
+  .sectionTitle{
       margin: 1rem;
   }
 
-  .software-sec{
+  .softwareSec{
     padding: 1rem;
     max-width: 100%;
     width: 100%;
@@ -94,7 +94,7 @@
 
 
   @media screen and (max-width:1080px) {
-    .page-container{
+    .pageContainer{
         max-width: 100%;
     }
     .col1{
@@ -103,7 +103,7 @@
     .col2{
         padding: 0.5rem;
     }
-    .cv-container{
+    .cvContainer{
         display: grid;
         grid-template-columns:30% 70%;
         height: auto;
@@ -112,18 +112,18 @@
             font-size: 1rem;
             padding: 0.4rem;
     }
-    .software-sec{
+    .softwareSec{
        
     }
 
 }
   @media screen and (max-width:470px) {
-    .page-container{
+    .pageContainer{
         align-items: center;
         height: auto;
         margin: auto;
     }
-    .cv-container{
+    .cvContainer{
         grid-template-columns: 100%;
         height: auto;
     }
@@ -133,13 +133,13 @@
     .col2{
         padding: 0.4rem;
     }
-    .lan-container{
+    .lanContainer{
         display: none;
     }
     .extracurricu{
         display: none;
     }
-    .software-sec{
+    .softwareSec{
         font-size: 0.3rem;
     }
 
