--- a/Components/socialmediaQr/ContactQR.module.scss
+++ b/Components/socialmediaQr/ContactQR.module.scss
@@ -8,9 +8,30 @@
     padding: 1rem;
     background:white;
     border-radius: 0.4rem;
-    padding: 1.4rem;
+    padding: 0.4rem;
     box-shadow: var(--dark-shadow);
+    
+    h1{
+        color: rgb(0, 0, 0);
+        font-size: 1.3rem;
+        margin: 1rem;
+    }
 } 
+
+.cardLinks{
+    font-size: 1.7rem;
+    margin: 0.4rem 2rem;
+    padding: 0.1rem;
+    border-bottom: 1px solid rgba(201, 197, 188, 0.595);
+    color: rgb(179, 119, 8);
+    display: flex;
+    align-items: center;
+
+}
+
+.cardLinks:hover{
+    color: rgb(47, 39, 24);
+}
 .profile{
     display: grid;
     grid-template-columns: 1fr 2fr;
