fixed the porftilio viewmore sec

--- a/styles/project.module.scss
+++ b/styles/project.module.scss
@@ -14,7 +14,6 @@
     color: black;
 }
   .question {
-
     padding: 1rem 1.5rem;
     border: 2px solid var(--clr-grey-special);
     margin-bottom: 0.3rem;
@@ -80,7 +79,7 @@
   margin: 0 auto;
   margin-bottom: 1.5rem;
 }
-.personImg {
+.profilePic {
   width: 100%;
   display: block;
   height: 100%;
