--- a/Components/viewMorebutton/Viewmore.module.scss
+++ b/Components/viewMorebutton/Viewmore.module.scss
@@ -8,7 +8,8 @@
     justify-content: center;
     width: auto;
     max-width: auto;
-    margin: auto;
+
+    margin:5rem auto;
     padding:2rem 1rem;
     border-radius: 50%;
     border: none;
@@ -23,6 +24,6 @@
 
 @media screen and (max-width:800px){
 .viewmoreBtn{
-    margin-top:1rem;
+   
 }
 }
