--- a/styles/experience.module.scss
+++ b/styles/experience.module.scss
@@ -12,8 +12,7 @@
 .expContent{
     background-color: rgb(0,0,0,0.1);
     margin:0.2rem;
-    border-radius: 0.4rem;
-    
+    border-radius: 0.4rem;  
 }
 .expContainer{
     margin:auto;
@@ -69,19 +68,10 @@
 }
 
 
-
-
-
-
-
-
-
 @media screen and (max-width:470px) {
    
     .expBox{
-        padding: 0.4rem;
-        max-width: 100%;
-        margin: auto;
+        padding-top: 7rem;
     } 
     .expContainer{
     
