--- a/Components/Contact/contact.module.scss
+++ b/Components/Contact/contact.module.scss
@@ -1,14 +1,13 @@
 .container{
-    
+    height: 100vh;
 }
 .contactContainer{
     display:grid;
     grid-template-columns: 1fr;
     gap: 2%;
-    margin: auto 59px auto 55px;
-    padding: 1rem;
-    border-radius: 1rem;
-    height: 800px;
+    margin: auto;
+    padding: 0.4rem;
+    border-radius: 0.4rem;
 }
 
 .contactOption{
