--- a/styles/experience.module.scss
+++ b/styles/experience.module.scss
@@ -1,12 +1,15 @@
+.sectionContainer{
+    padding-top: 5rem;
+    margin: auto;
+}
 .container{
     height:100vh;
     align-items: center;
-    margin:5rem auto;
+    margin: auto;
 }
 
 .expBox{
     margin: auto;
-    padding-top: 10rem;
     max-width: 1200px;
 }
 .expContent{
@@ -71,13 +74,13 @@
 @media screen and (max-width:470px) {
    
     .expBox{
-        padding-top: 7rem;
+        
     } 
     .expContainer{
     
     } 
     .expContent{
-        margin: 0.6rem;
+        margin: 0.4rem;
     }
     
     .expDetails{
