--- a/styles/socialMedia.module.scss
+++ b/styles/socialMedia.module.scss
@@ -1,6 +1,4 @@
 
-
-
 .socialContainer{
     display:flex;
     z-index: 10;
@@ -16,12 +14,15 @@
     border-radius: 3rem;
     background: rgba(0, 0, 0, 0.2);
     a{
-        
         color:orange;
         display: flex;
         font-size: 1.5rem;
         padding: 1rem 0rem;
+        &:hover{
+            color: white;
+        }
     }
+
 }
 
 
