--- a/Components/viewMorebutton/Viewmore.module.scss
+++ b/Components/viewMorebutton/Viewmore.module.scss
@@ -1,15 +1,18 @@
-
+.viewMoreContainer{
+    margin:auto ;
+    padding-top: 2rem;
+}
 
 .viewmoreBtn{
+    display: flex;
+    margin: auto;
     background-color: rgba(242, 242, 242, 0.462);
     font-size: 1rem;
     color:white;
-    display: flex;
     justify-content: center;
     width: auto;
     max-width: auto;
-    margin:5rem auto 0rem auto;
-    padding:2rem 1rem;
+    padding:1rem 0.1rem;
     border-radius: 50%;
     border: none;
     &:hover{
@@ -24,8 +27,10 @@
 }
 
 
-@media screen and (max-width:800px){
-.viewmoreBtn{
-   
-}
+@media screen and (max-width:1080px){
+    .viewMoreContainer{
+        margin:auto;
+        padding-top: 10rem;
+    }
+
 }
