--- a/styles/experience.module.scss
+++ b/styles/experience.module.scss
@@ -10,12 +10,15 @@
 
 .expBox{
     margin: auto;
-    max-width: 1200px;
+    max-width: 1300px;
 }
 .expContent{
-    background-color: rgb(0,0,0,0.1);
+    background-color: rgba(187, 187, 187, 0.1);
     margin:0.2rem;
     border-radius: 0.4rem;  
+    &:hover{
+        background-color: rgba(206, 203, 203, 0.493);
+    }
 }
 .expContainer{
     margin:auto;
