--- a/styles/portfilio.module.scss
+++ b/styles/portfilio.module.scss
@@ -6,7 +6,7 @@
     gap: 2%;
     max-width: 1400px;
     width: 100%;
-    margin:4rem auto;
+    margin: auto;
     padding: 1rem 3rem;
     padding-top: 5rem;
 
@@ -23,18 +23,20 @@
 .aboutCards{
     backdrop-filter: blur(5px);
     background: rgba(0, 0, 0, 0.2);
-    padding: 1rem;
+    padding: 0.4rem;
     border-radius: 0.5rem;
 }
 .aboutCard{
     align-items: center;
     text-align: center;
-    padding: 1rem;
-    border-radius: 0.1rem;
-    border: 1px solid white;
+    padding: 0.2rem;
+    border:1px solid rgb(87, 87, 87);
+    border-radius: 0.4rem;
 }
 .aboutCard:hover{
-    border-color: gold;
+    border:1px solid rgb(162, 138, 0);
+    transition: var( --transition);
+    transform: scale(0.98);
 }
 .portfilioContainer img{
     display: block;
