--- a/styles/profilePic.module.scss
+++ b/styles/profilePic.module.scss
@@ -1,9 +1,9 @@
 
 .picContainer{
     background-image: 
-    linear-gradient(to bottom, rgba(24,53,90, 0.20) 90%,rgba(24,53,90, 1)100%,rgba(24,53,90, 1) 100%),
-    linear-gradient(to top, rgba(24,53,90, 0.010) 70%,rgba(24,53,90, 1) 100%,rgba(24,53,90, 1) 100%),
-    linear-gradient(to right, rgba(24,53,90, 0.010) 50%,rgba(24,53,90, 1) 100%,rgba(24,53,90, 1) 100%),
+    linear-gradient(to bottom, rgba(0, 0, 0, 0.2) 90%,rgb(0, 0, 0)100%,rgb(0, 0, 0) 100%),
+    linear-gradient(to top, rgba(0, 0, 0, 0.01) 70%,rgb(0, 0, 0) 100%,rgb(0, 0, 0) 100%),
+    linear-gradient(to right, rgba(0, 0, 0, 0.01) 50%,rgb(0, 0, 0) 100%,rgb(0, 0, 0) 100%),
     url("../public/Assests/webP/meBirlingym.webp");
     z-index: 1;
     background-position:center;
@@ -22,10 +22,10 @@
 
 @media screen and  (max-width:1080px) {
 .pic{
-    background-image: linear-gradient(to bottom, rgba(24,53,90, 0.20) 80%,rgba(24,53,90, 1) 100%,rgba(24,53,90, 1) 100%),
-    linear-gradient(to top, rgba(24,53,90, 0.010) 80%,rgba(24,53,90, 1) 100%,rgba(24,53,90, 1) 100%),
-    linear-gradient(to right, rgba(24,53,90, 0.010) 80%,rgba(24,53,90, 1) 100%,rgba(24,53,90, 1) 100%),
-    linear-gradient(to left, rgba(24,53,90, 0.010) 80%,rgba(24,53,90, 1) 100%,rgba(24,53,90,1) 100%),
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2) 80%,rgb(0, 0, 0) 100%,rgb(0, 0, 0) 100%),
+    linear-gradient(to top, rgba(0, 0, 0, 0.01) 80%,rgb(0, 0, 0) 100%,rgb(0, 0, 0) 100%),
+    linear-gradient(to right, rgba(0, 0, 0, 0.01) 80%,rgb(0, 0, 0) 100%,rgb(0, 0, 0) 100%),
+    linear-gradient(to left, rgba(0, 0, 0, 0.01) 80%,rgb(0, 0, 0) 100%,rgb(0, 0, 0) 100%),
     url("../public/Assests/webP/meBirlingym.webp");
     border-left: 1px solid white;
     border-bottom: 1px solid orange ;
