--- a/styles/project.module.scss
+++ b/styles/project.module.scss
@@ -11,7 +11,8 @@
     margin: auto;
     display: grid;
     place-items: center;
-    color: black;
+    color: rgb(0, 0, 0);
+   
 }
   .question {
     padding: 1rem 1.5rem;
@@ -20,25 +21,18 @@
     border-radius: 1rem;
     box-shadow: var(--light-shadow);
     background-color: white;
-  
+    p {
+      color: var(--clr-grey-3);
+      margin-bottom: 0;
+      margin-top: 0.5rem;
+    }
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
   }
-  .question h4 {
-    text-transform: none;
-    line-height: 1.5;
-  }
-  .question p {
-    color: var(--clr-grey-3);
-    margin-bottom: 0;
-    margin-top: 0.5rem;
-  }
-  .question header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  .question header h4 {
-    margin-bottom: 0;
-  }
+
 
    /*======= review style section ========= */
   .reviewContainer{
