--- a/Components/profilePic/profilePic.module.scss
+++ b/Components/profilePic/profilePic.module.scss
@@ -4,7 +4,7 @@
     linear-gradient(to bottom, rgba(0, 0, 0, 0.2) 90%,rgb(0, 0, 0)100%,rgb(0, 0, 0) 100%),
     linear-gradient(to top, rgba(0, 0, 0, 0.01) 70%,rgb(0, 0, 0) 100%,rgb(0, 0, 0) 100%),
     linear-gradient(to right, rgba(0, 0, 0, 0.01) 50%,rgb(0, 0, 0) 100%,rgb(0, 0, 0) 100%),
-    url("../public/Assests/webP/meBirlingym.webp");
+    url("../../public/Assests/webP/meBirlingym.webp");
     z-index: 1;
     background-position:center;
     background-size:100% auto;
@@ -26,7 +26,7 @@
     linear-gradient(to top, rgba(0, 0, 0, 0.01) 80%,rgb(0, 0, 0) 100%,rgb(0, 0, 0) 100%),
     linear-gradient(to right, rgba(0, 0, 0, 0.01) 80%,rgb(0, 0, 0) 100%,rgb(0, 0, 0) 100%),
     linear-gradient(to left, rgba(0, 0, 0, 0.01) 80%,rgb(0, 0, 0) 100%,rgb(0, 0, 0) 100%),
-    url("../public/Assests/webP/meBirlingym.webp");
+    url("../../public/Assests/webP/meBirlingym.webp");
     border-left: 1px solid white;
     border-bottom: 1px solid orange ;
     animation:borderChange 3s;
