--- a/Components/profilePic/profilePic.module.scss
+++ b/Components/profilePic/profilePic.module.scss
@@ -1,3 +1,12 @@
-.profilePic{
-    
+.profilePic {
+  padding: 4rem;
+  background: linear-gradient(#000000, #987200);
+  border-radius: 0.5rem;
+  display: grid;
+  grid-template-columns: 30% 30% 30%;
+  gap: 5%;
+}
+
+.profileImage {
+  border-radius: 0.5rem;
 }
