--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,7 +22,7 @@
       --color-primary: #c4aa26;
       --color-primary-variant : #384555;
       --color-white: #ffffff;
-      --color-black: #000000b4;
+      --color-black: #000000;
       --color-light: #17355a;
       --container-width-lg : 75%;
       --container-width-md:86%;
@@ -39,7 +39,7 @@ html, body{
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
   font-family: Arial, sans-serif, 'Franklin Gothic Medium', 'Arial Narrow', sans-serif;
-  background-color:rgb(15,15,17);
+  background-color:rgb(0, 0, 0);
   color:var(--color-white);
   line-height:1.7;
 }
