fixed some colors

--- a/Components/profilePic/profilePic.module.scss
+++ b/Components/profilePic/profilePic.module.scss
@@ -1,6 +1,6 @@
 .profilePic {
   padding: 4rem;
-  background: linear-gradient(#000000, #987200);
+  background: linear-gradient(#000000, rgb(0, 6, 83));
   border-radius: 0.5rem;
   display: grid;
   grid-template-columns: 30% 30% 30%;
@@ -8,5 +8,5 @@
 }
 
 .profileImage {
-  border-radius: 0.5rem;
+  border-radius: 0.1rem;
 }
