--- a/Components/cvComponent/cvCompos.module.scss
+++ b/Components/cvComponent/cvCompos.module.scss
@@ -21,13 +21,18 @@
 .person{
     width: 80%;
     border-radius: 50%;
-    padding: 2rem;
+    padding: 1rem;
     align-items: center;
     text-align: center;
+
 }
 
 .cvIamge{
     border-radius: 50%;
+    &:hover{
+        cursor: pointer;
+        transform: scale(1.1);
+    }
 }
 
 .cv{
@@ -38,12 +43,12 @@
 
 .col1{
     padding: 0.6rem;
-    background-color: rgba(81, 81, 77, 0.417);
+    background-color: rgb(100, 111, 136);
 
 }
 .col2{
     background-color: rgba(13, 17, 46, 0.289);
-   color: white;
+    color: white;
 
 }
 
@@ -62,7 +67,7 @@
     margin: 0.4rem;
     height: 0.8rem;
     width: 0.8rem;
-    background-color: #bbb;
+    background-color: rgb(217, 213, 213);
     border-radius: 50%;
     display: inline-block;
   }
@@ -98,7 +103,7 @@
  
 
   .vl {
-    border-left: 1px solid rgb(250, 250, 250);
+    border-left: 1px solid rgba(250, 250, 250, 0.617);
     height:auto;
     margin-left: auto;
   }
