--- a/Components/socialmediaQr/ContactQR.module.scss
+++ b/Components/socialmediaQr/ContactQR.module.scss
@@ -6,12 +6,13 @@
     margin:1rem auto;
     height: auto;
     padding: 0.3rem;
-    background:white;
+    backdrop-filter: blur(5px);
+    background: rgba(0, 0, 0, 0.413);
     border-radius: 0.4rem;
     box-shadow: var(--dark-shadow);
     
     h1{
-        color: rgb(0, 0, 0);
+        color: rgb(235, 235, 235);
         font-size: 1rem;
         margin: 0.7rem;
     }
