--- a/Components/navbar/navbar.module.scss
+++ b/Components/navbar/navbar.module.scss
@@ -39,6 +39,9 @@
     &:hover {
         background-color: rgba(154, 142, 142, 0.83);
     };
+    &:active {
+        background-color: rgba(102, 94, 94, 0.469);
+    };
     
 } 
     // background-color: ${({isOpen}) => (isOpen ? "#000000" : "none") };
