--- a/Components/profilePic/profilePic.module.scss
+++ b/Components/profilePic/profilePic.module.scss
@@ -1,5 +1,5 @@
 .profilePic {
-  padding: 4rem;
+  padding: 3rem 2rem;
   background: linear-gradient(#000000, rgb(0, 6, 83));
   border-radius: 0.5rem;
   display: grid;
