--- a/Components/navbar/navbar.module.scss
+++ b/Components/navbar/navbar.module.scss
@@ -58,7 +58,7 @@
   font-size: 1rem;
   width: 90px;
   backdrop-filter: blur(5px);
-  background: rgba(0, 0, 0, 0.2);
+  background: rgba(17, 16, 16, 0.542);
   color: #fff;
   text-align: center;
   border-radius: 6px;
@@ -118,14 +118,16 @@
   .navLinks {
     padding: 0.9rem;
   }
+  .active {
+    background-color: rgba(171, 171, 172, 0)
+  }
 
   .sociaToggel {
   }
   .tooltip .tooltiptext {
-    width: 100px;
-    transform: rotate(-90deg);
-    top: 140%;
-    left: 90%;
+    width: 90px;
+    top: 80%;
+    left: 120%;
     margin-left: -60px;
   }
 }
